--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/highlight.js": "^10.1.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "highlight.js": "^10.7.2",
     "node-sass": "5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
