--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "clsx": "^1.1.1",
     "highlight.js": "^10.7.2",
     "node-sass": "5",
     "react": "^17.0.2",
